Work in progress on the visualization chart.

--- a/Sim-Mix-Custom-Piece-Tests/Dashboard/Components/_Imports.razor
+++ b/Sim-Mix-Custom-Piece-Tests/Dashboard/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using Dashboard
 @using Dashboard.Components
+@using Syncfusion.Blazor.Charts
+@using Syncfusion.Blazor
+@using BusinessLogic
+@using Models.PLA
