--- a/Sim-Mix-Custom-Piece-Tests/Dashboard/Components/App.razor
+++ b/Sim-Mix-Custom-Piece-Tests/Dashboard/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Dashboard.styles.css" />
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <HeadOutlet />
 </head>
 
